See <<annotation-error-handling>> for more information.

==== Pausing/Resuming Containers

The listener containers now have `pause()` and `resume()` methods (since _version 2.1.3_).
See <<pause-resume>> for more information.

==== Stateful Retry

Starting with _version 2.1.3_, stateful retry can be configured; see <<stateful-retry>> for more information.

==== Client ID

Starting with _version 2.1.1_, it is now possible to set the `client.id` prefix on `@KafkaListener`.
Previously, to customize the client id, you would need a separate consumer factory (and container factory) per listener.
The prefix is suffixed with `-n` to provide unique client ids when using concurrency.


==== Logging Offset Commits

By default, logging of topic offset commits is performed with the DEBUG logging level.
Starting with _version 2.1.2_, there is a new property in `ContainerProperties` called `commitLogLevel` which allows you to specify the log level for these messages.
See <<kafka-container>> for more information.

==== Default @KafkaHandler

Starting with _version 2.1.3_, one of the `@KafkaHandler` s on a class-level `@KafkaListener` can be designated as the default.
See <<class-level-kafkalistener>> for more information.

==== ReplyingKafkaTemplate

Starting with _version 2.1.3_, a subclass of `KafkaTemplate` is provided to support request/reply semantics.
See <<replying-template>> for more information.

==== ChainedKafkaTransactionManager

_Version 2.1.3_ introduced the `ChainedKafkaTransactionManager` see <<chained-transaction-manager>> for more information.

==== After rollback processing

Starting with _version 2.1.6_, a new `AfterRollbackProcessor` strategy is provided - see <<after-rollback>> for more information.


==== Migration Guide from 2.0

https://github.com/spring-projects/spring-kafka/wiki/Spring-for-Apache-Kafka-2.0-to-2.1-Migration-Guide[2.0 to 2.1 Migration].